# hackedit

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
common/: CMakeLists.txt
common/icons/: CMakeLists.txt  icons.qrc  qmldir.in
common/icons/include/: Exports.hpp  Plugin.hpp
common/icons/qml/: HackEditIcons.qml  MaterialIcons.qml
common/icons/scripts/: MaterialIcons-Regular.codepoints  gen_icons_qml.py
common/icons/src/: Plugin.cpp
common/include/hackedit/common/: HackEditNamespace.hpp
common/logging/: CMakeLists.txt
common/logging/examples/: example-log-config.ini  main.cpp
common/logging/include/hackedit/common/logging/: Exports.hpp  ILogger.hpp  ILoggerFactory.hpp  LogLevel.hpp  LoggingMacros.hpp  LoggingManager.hpp  Macros.hpp
common/logging/include/hackedit/common/logging/log4cplus/: Log4CplusLoggerFactory.hpp  Log4CplusLoggerFactory.hpp.cC8452
common/logging/src/: ILogger.cpp  ILoggerFactory.cpp  LoggingManager.cpp
common/logging/src/log4cplus/: Log4CplusLogger.cpp  Log4CplusLoggerFactory.cpp  LogsCplusLogger.hpp
common/logging/tests/: CMakeLists.txt  TestLog4CplusLogger.cpp  TestLoggingMacros.cpp  TestLoggingManager.cpp
common/logging/tests/mocks/: MockILogger.hpp  MockILoggerFactory.hpp
common/utils/: CMakeLists.txt
common/utils/include/hackedit/common/utils/: Cpp14Support.hpp  Macros.hpp  foo.hpp
common/utils/src/: foo.cpp
editor/: CMakeLists.txt
editor/backend/: CMakeLists.txt
editor/backend/include/hackedit/editor/backend/: Encodings.hpp  EndOfLine.hpp  Exports.hpp  FileLoader.hpp  TextDocument.hpp
editor/backend/src/: Encodings.cpp  FileLoader.cpp  TextDocument.cpp
editor/backend/tests/: CMakeLists.txt  TestEncodings.cpp  TestTextDocument.cpp
editor/examples/basic/: CMakeLists.txt  main.cpp  main.qml
editor/frontend/: CMakeLists.txt  qmldir.in
editor/frontend/include/: EditorPlugin.hpp  Exports.hpp
editor/frontend/qml/: CodeEditor.qml
editor/frontend/src/: EditorPlugin.cpp
examples/: CMakeLists.txt
examples/common/logging/: CMakeLists.txt  main.cpp
examples/editor/basic/: CMakeLists.txt  main.cpp  main.qml
scripts/: travis-install.sh
scripts/cmake/: CodeCoverage.cmake  Config.cmake  GTest.cmake  Log4Cplus.cmake  Macros.cmake  Qt5Config.cmake  test_main.cpp.in
